Bash optimizations for ensure script