@@ -1,8 +1,8 @@
-#!/bin/sh
+#!/bin/bash
 
 SCRIPT="$0"
 
-while [ -h "$SCRIPT" ] ; do
+while [ -L "$SCRIPT" ] ; do
   ls=$(ls -ld "$SCRIPT")
   link=$(expr "$ls" : '.*-> \(.*\)$')
   if expr "$link" : '/.*' > /dev/null; then
@@ -25,7 +25,7 @@ then
 fi
 
 # if you've executed sbt assembly previously it will use that instead.
-export JAVA_OPTS="${JAVA_OPTS} -XX:MaxPermSize=256M -Xmx1024M -DloggerPath=conf/log4j.properties"
+export JAVA_OPTS="${JAVA_OPTS} -Xmx1024M -DloggerPath=conf/log4j.properties"
 ags="$@ generate -i modules/openapi-generator/src/test/resources/2_0/petstore.yaml -g fsharp-functions -o samples/server/petstore/fsharp-functions"
 
 java ${JAVA_OPTS} -jar ${executable} ${ags}
